sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var int:ecart = getNombreValeurs();
	
}
